[package]
name = "cond_test"
version = "0.1.0"
authors = ["Valkum <rudi.floren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
tokio = { version = "1.0.2", features = ["full"] }
mini-redis = "0.4"